# thesis

./: data_simulation.ipynb  pyproject.toml  simple_model.ipynb
